k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sakhisilai
  labels:
    name: sakhisilai
