k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: sakhisilai
  labels:
    app: sakhisilai-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sakhisilai-frontend
  template:
    metadata:
      labels:
        app: sakhisilai-frontend
    spec:
      containers:
        - name: frontend
          image: arvi8080/sakhisilai-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
